Update scheduler tests to match new Windows