@@ -1,6 +1,6 @@
 package gov.nasa.jpl.aerie.scheduler;
 
-import gov.nasa.jpl.aerie.constraints.time.Window;
+import gov.nasa.jpl.aerie.constraints.time.Interval;
 import gov.nasa.jpl.aerie.constraints.time.Windows;
 import gov.nasa.jpl.aerie.constraints.tree.All;
 import gov.nasa.jpl.aerie.constraints.tree.Expression;
@@ -52,7 +52,7 @@ public class TestApplyWhen {
     final var activityType = problem.getActivityType("ControllableDurationActivity");
     RecurrenceGoal goal = new RecurrenceGoal.Builder()
         .named("Test recurrence goal")
-        .forAllTimeIn(new WindowsWrapperExpression(new Windows(Window.betweenClosedOpen(Duration.of(1, Duration.SECONDS), Duration.of(12, Duration.SECONDS)))))
+        .forAllTimeIn(new WindowsWrapperExpression(Windows.definedEverywhere(Interval.betweenClosedOpen(Duration.of(1, Duration.SECONDS), Duration.of(12, Duration.SECONDS)), true)))
         .thereExistsOne(new ActivityCreationTemplate.Builder()
                             .duration(Duration.of(2, Duration.SECONDS))
                             .ofType(activityType)
@@ -86,7 +86,7 @@ public class TestApplyWhen {
     final var activityType = problem.getActivityType("ControllableDurationActivity");
     RecurrenceGoal goal = new RecurrenceGoal.Builder()
         .named("Test recurrence goal")
-        .forAllTimeIn(new WindowsWrapperExpression(new Windows(Window.betweenClosedOpen(Duration.of(1, Duration.SECONDS), Duration.of(17, Duration.SECONDS))))) //add colorful tests that make use of windows capability
+        .forAllTimeIn(new WindowsWrapperExpression(Windows.definedEverywhere(Interval.betweenClosedOpen(Duration.of(1, Duration.SECONDS), Duration.of(17, Duration.SECONDS)), true))) //add colorful tests that make use of windows capability
         .thereExistsOne(new ActivityCreationTemplate.Builder()
                             .duration(Duration.of(2, Duration.SECONDS))
                             .ofType(activityType)
@@ -120,7 +120,7 @@ public class TestApplyWhen {
     final var activityType = problem.getActivityType("ControllableDurationActivity");
     RecurrenceGoal goal = new RecurrenceGoal.Builder()
         .named("Test recurrence goal")
-        .forAllTimeIn(new WindowsWrapperExpression(new Windows(Window.betweenClosedOpen(Duration.of(1, Duration.SECONDS), Duration.of(19, Duration.SECONDS)))))
+        .forAllTimeIn(new WindowsWrapperExpression(Windows.definedEverywhere(Interval.betweenClosedOpen(Duration.of(1, Duration.SECONDS), Duration.of(19, Duration.SECONDS)), true)))
         .thereExistsOne(new ActivityCreationTemplate.Builder()
                             .duration(Duration.of(2, Duration.SECONDS))
                             .ofType(activityType)
@@ -154,7 +154,7 @@ public class TestApplyWhen {
     final var activityType = problem.getActivityType("ControllableDurationActivity");
     RecurrenceGoal goal = new RecurrenceGoal.Builder()
         .named("Test recurrence goal")
-        .forAllTimeIn(new WindowsWrapperExpression(new Windows(Window.betweenClosedOpen(Duration.of(1, Duration.SECONDS), Duration.of(21, Duration.SECONDS)))))
+        .forAllTimeIn(new WindowsWrapperExpression(Windows.definedEverywhere(Interval.betweenClosedOpen(Duration.of(1, Duration.SECONDS), Duration.of(21, Duration.SECONDS)), true)))
         .thereExistsOne(new ActivityCreationTemplate.Builder()
                             .duration(Duration.of(2, Duration.SECONDS))
                             .ofType(activityType)
@@ -188,7 +188,7 @@ public class TestApplyWhen {
     final var activityType = problem.getActivityType("ControllableDurationActivity");
     RecurrenceGoal goal = new RecurrenceGoal.Builder()
         .named("Test recurrence goal")
-        .forAllTimeIn(new WindowsWrapperExpression(new Windows(Window.betweenClosedOpen(Duration.of(1, Duration.SECONDS), Duration.of(2, Duration.SECONDS)))))
+        .forAllTimeIn(new WindowsWrapperExpression(Windows.definedEverywhere(Interval.betweenClosedOpen(Duration.of(1, Duration.SECONDS), Duration.of(2, Duration.SECONDS)), true)))
         .thereExistsOne(new ActivityCreationTemplate.Builder()
                             .duration(Duration.of(1, Duration.SECONDS))
                             .ofType(activityType)
@@ -225,10 +225,10 @@ public class TestApplyWhen {
         fooMissionModel), SimulationUtility.getFooSchedulerModel());
     final var activityType = problem.getActivityType("ControllableDurationActivity");
 
-    final var goalWindow = new Windows(new LinkedList<Window>(Arrays.asList(
-        Window.between(Duration.of(1, Duration.SECONDS), Duration.of(7, Duration.SECONDS)), //needs to be 2 longer than recurrence window for second to last occurrence to be scheduled, no partial recurrence scheduling :(
-        Window.between(Duration.of(11, Duration.SECONDS), Duration.of(17, Duration.SECONDS))
-    )));
+    final var goalWindow = Windows.definedEverywhere(Arrays.asList(
+        Interval.between(Duration.of(1, Duration.SECONDS), Duration.of(7, Duration.SECONDS)), //needs to be 2 longer than recurrence interval for second to last occurrence to be scheduled, no partial recurrence scheduling :(
+        Interval.between(Duration.of(11, Duration.SECONDS), Duration.of(17, Duration.SECONDS))
+    ), true);
 
     RecurrenceGoal goal = new RecurrenceGoal.Builder()
         .named("Test recurrence goal")
@@ -270,10 +270,10 @@ public class TestApplyWhen {
         fooMissionModel), SimulationUtility.getFooSchedulerModel());
     final var activityType = problem.getActivityType("ControllableDurationActivity");
 
-    final var goalWindow = new Windows(new LinkedList<Window>(Arrays.asList(
-        Window.between(Duration.of(1, Duration.SECONDS), Duration.of(4, Duration.SECONDS)),
-        Window.between(Duration.of(11, Duration.SECONDS), Duration.of(13, Duration.SECONDS))
-    )));
+    final var goalWindow = Windows.definedEverywhere(Arrays.asList(
+        Interval.between(Duration.of(1, Duration.SECONDS), Duration.of(4, Duration.SECONDS)),
+        Interval.between(Duration.of(11, Duration.SECONDS), Duration.of(13, Duration.SECONDS))
+    ), true);
 
     RecurrenceGoal goal = new RecurrenceGoal.Builder()
         .named("Test recurrence goal")
@@ -305,7 +305,7 @@ public class TestApplyWhen {
   public void testRecurrenceWindowsGlobalCheck() {
     //                     123456789012345678901
     // RECURRENCE WINDOW: [++-++-++-++-++-++-++-] (if global)
-    // GOAL WINDOW:       [+++++--++++++++-++++-] (if window is same length as recurrence window, fails)
+    // GOAL WINDOW:       [+++++--++++++++-++++-] (if interval is same length as recurrence interval, fails)
     // RESULT:            [++-----++-++----~~---] (if not global)
 
     var planningHorizon = new PlanningHorizon(TestUtility.timeFromEpochSeconds(0),TestUtility.timeFromEpochSeconds(20));
@@ -315,11 +315,11 @@ public class TestApplyWhen {
         fooMissionModel), SimulationUtility.getFooSchedulerModel());
     final var activityType = problem.getActivityType("ControllableDurationActivity");
 
-    final var goalWindow = new Windows(new LinkedList<Window>(Arrays.asList(
-        Window.between(Duration.of(1, Duration.SECONDS), Duration.of(5, Duration.SECONDS)),
-        Window.between(Duration.of(8, Duration.SECONDS), Duration.of(15, Duration.SECONDS)),
-        Window.between(Duration.of(17, Duration.SECONDS), Duration.of(20, Duration.SECONDS))
-    )));
+    final var goalWindow = Windows.definedEverywhere(List.of(
+        Interval.between(Duration.of(1, Duration.SECONDS), Duration.of(5, Duration.SECONDS)),
+        Interval.between(Duration.of(8, Duration.SECONDS), Duration.of(15, Duration.SECONDS)),
+        Interval.between(Duration.of(17, Duration.SECONDS), Duration.of(20, Duration.SECONDS))
+    ), true);
 
     RecurrenceGoal goal = new RecurrenceGoal.Builder()
         .named("Test recurrence goal")
@@ -344,7 +344,7 @@ public class TestApplyWhen {
     assertTrue(TestUtility.activityStartingAtTime(plan,Duration.of(1, Duration.SECONDS), activityType));
     assertTrue(TestUtility.activityStartingAtTime(plan,Duration.of(8, Duration.SECONDS), activityType));
     assertTrue(TestUtility.activityStartingAtTime(plan,Duration.of(11, Duration.SECONDS), activityType));
-    assertFalse(TestUtility.activityStartingAtTime(plan,Duration.of(17, Duration.SECONDS), activityType)); //window (len 4) needs to be 2 longer than the recurrence repeatingEvery (len 3)
+    assertFalse(TestUtility.activityStartingAtTime(plan,Duration.of(17, Duration.SECONDS), activityType)); //interval (len 4) needs to be 2 longer than the recurrence repeatingEvery (len 3)
   }
 
   @Test
@@ -361,11 +361,11 @@ public class TestApplyWhen {
         fooMissionModel), SimulationUtility.getFooSchedulerModel());
     final var activityType = problem.getActivityType("ControllableDurationActivity");
 
-    final var goalWindow = new Windows(new LinkedList<Window>(Arrays.asList(
-        Window.between(Duration.of(1, Duration.SECONDS), Duration.of(1, Duration.SECONDS)),
-        Window.between(Duration.of(7, Duration.SECONDS), Duration.of(9, Duration.SECONDS)),
-        Window.between(Duration.of(11, Duration.SECONDS), Duration.of(13, Duration.SECONDS))
-    )));
+    final var goalWindow = Windows.definedEverywhere(List.of(
+        Interval.between(Duration.of(1, Duration.SECONDS), Duration.of(1, Duration.SECONDS)),
+        Interval.between(Duration.of(7, Duration.SECONDS), Duration.of(9, Duration.SECONDS)),
+        Interval.between(Duration.of(11, Duration.SECONDS), Duration.of(13, Duration.SECONDS))
+    ), true);
 
     RecurrenceGoal goal = new RecurrenceGoal.Builder()
         .named("Test recurrence goal")
@@ -403,7 +403,7 @@ public class TestApplyWhen {
     final var activityType = problem.getActivityType("BasicActivity");
     RecurrenceGoal goal = new RecurrenceGoal.Builder()
         .named("Test recurrence goal")
-        .forAllTimeIn(new WindowsWrapperExpression(new Windows(Window.betweenClosedOpen(Duration.of(1, Duration.SECONDS), Duration.of(12, Duration.SECONDS)))))
+        .forAllTimeIn(new WindowsWrapperExpression(Windows.definedEverywhere(Interval.betweenClosedOpen(Duration.of(1, Duration.SECONDS), Duration.of(12, Duration.SECONDS)), true)))
         .thereExistsOne(new ActivityCreationTemplate.Builder()
                             .ofType(activityType)
                             .build())
@@ -431,7 +431,7 @@ public class TestApplyWhen {
 
   @Test
   public void testCardinality() {
-    Window period = Window.betweenClosedOpen(Duration.of(0, Duration.SECONDS), Duration.of(5, Duration.SECONDS));
+    Interval period = Interval.betweenClosedOpen(Duration.of(0, Duration.SECONDS), Duration.of(5, Duration.SECONDS));
 
     final var fooMissionModel = SimulationUtility.getFooMissionModel();
     final var planningHorizon = new PlanningHorizon(TestUtility.timeFromEpochSeconds(0), TestUtility.timeFromEpochSeconds(25));
@@ -443,14 +443,14 @@ public class TestApplyWhen {
     problem.add(BinaryMutexConstraint.buildMutexConstraint(activityType, activityType));
 
     CardinalityGoal goal = new CardinalityGoal.Builder()
-        .duration(Window.between(Duration.of(16, Duration.SECONDS), Duration.of(19, Duration.SECONDS)))
+        .duration(Interval.between(Duration.of(16, Duration.SECONDS), Duration.of(19, Duration.SECONDS)))
         .occurences(new Range<>(3, 10))
         .thereExistsOne(new ActivityCreationTemplate.Builder()
                             .ofType(problem.getActivityType("ControllableDurationActivity"))
                             .duration(Duration.of(2, Duration.SECONDS))
                             .build())
         .named("TestCardGoal")
-        .forAllTimeIn(new WindowsWrapperExpression(new Windows(period)))
+        .forAllTimeIn(new WindowsWrapperExpression(Windows.definedEverywhere(period, true)))
         .owned(ChildCustody.Jointly)
         .build();
 
@@ -482,13 +482,13 @@ public class TestApplyWhen {
         fooMissionModel), SimulationUtility.getFooSchedulerModel());
     final var activityType = problem.getActivityType("ControllableDurationActivity");
 
-    final var goalWindow = new Windows(new LinkedList<Window>(Arrays.asList(
-        Window.between(Duration.of(1, Duration.SECONDS), Duration.of(5, Duration.SECONDS)),
-        Window.between(Duration.of(11, Duration.SECONDS), Duration.of(15, Duration.SECONDS)) //window here is exclusive, so I extended it by 1. in the case of recurrence goal, it was exclusive and had to be extended by 2 (one for exclusive/inclusive, and another so that the window wasn't equal in length to the recurrence window)
-    )));
+    final var goalWindow = Windows.definedEverywhere(List.of(
+        Interval.between(Duration.of(1, Duration.SECONDS), Duration.of(5, Duration.SECONDS)),
+        Interval.between(Duration.of(11, Duration.SECONDS), Duration.of(15, Duration.SECONDS)) //interval here is exclusive, so I extended it by 1. in the case of recurrence goal, it was exclusive and had to be extended by 2 (one for exclusive/inclusive, and another so that the interval wasn't equal in length to the recurrence interval)
+    ), true);
 
     CardinalityGoal goal = new CardinalityGoal.Builder()
-        .duration(Window.between(Duration.of(16, Duration.SECONDS), Duration.of(19, Duration.SECONDS)))
+        .duration(Interval.between(Duration.of(16, Duration.SECONDS), Duration.of(19, Duration.SECONDS)))
         .occurences(new Range<>(3, 10))
         .thereExistsOne(new ActivityCreationTemplate.Builder()
                             .ofType(problem.getActivityType("ControllableDurationActivity"))
@@ -531,14 +531,14 @@ public class TestApplyWhen {
         fooMissionModel), SimulationUtility.getFooSchedulerModel());
     final var activityType = problem.getActivityType("ControllableDurationActivity");
 
-    final var goalWindow = new Windows(new LinkedList<Window>(Arrays.asList(
-        Window.between(Duration.of(1, Duration.SECONDS), Duration.of(1, Duration.SECONDS)),
-        Window.between(Duration.of(7, Duration.SECONDS), Duration.of(8, Duration.SECONDS)), //exclusive
-        Window.between(Duration.of(11, Duration.SECONDS), Duration.of(13, Duration.SECONDS))
-    )));
+    final var goalWindow = Windows.definedEverywhere(List.of(
+        Interval.between(Duration.of(1, Duration.SECONDS), Duration.of(1, Duration.SECONDS)),
+        Interval.between(Duration.of(7, Duration.SECONDS), Duration.of(8, Duration.SECONDS)), //exclusive
+        Interval.between(Duration.of(11, Duration.SECONDS), Duration.of(13, Duration.SECONDS))
+    ), true);
 
     CardinalityGoal goal = new CardinalityGoal.Builder()
-        .duration(Window.between(Duration.of(16, Duration.SECONDS), Duration.of(19, Duration.SECONDS)))
+        .duration(Interval.between(Duration.of(16, Duration.SECONDS), Duration.of(19, Duration.SECONDS)))
         .occurences(new Range<>(3, 10))
         .thereExistsOne(new ActivityCreationTemplate.Builder()
                             .ofType(problem.getActivityType("ControllableDurationActivity"))
@@ -571,7 +571,7 @@ public class TestApplyWhen {
     /*
       Expect 5 to get scheduled just in a row, as basicactivity's duration should allow that.
      */
-    Window period = Window.betweenClosedOpen(Duration.of(0, Duration.SECONDS), Duration.of(20, Duration.SECONDS));
+    Interval period = Interval.betweenClosedOpen(Duration.of(0, Duration.SECONDS), Duration.of(20, Duration.SECONDS));
 
     final var fooMissionModel = SimulationUtility.getFooMissionModel();
     final var planningHorizon = new PlanningHorizon(TestUtility.timeFromEpochSeconds(0), TestUtility.timeFromEpochSeconds(25));
@@ -584,13 +584,13 @@ public class TestApplyWhen {
     problem.add(BinaryMutexConstraint.buildMutexConstraint(activityType, activityType));
 
     CardinalityGoal goal = new CardinalityGoal.Builder()
-        .duration(Window.between(Duration.of(16, Duration.SECONDS), Duration.of(19, Duration.SECONDS)))
+        .duration(Interval.between(Duration.of(16, Duration.SECONDS), Duration.of(19, Duration.SECONDS)))
         .occurences(new Range<>(3, 10))
         .thereExistsOne(new ActivityCreationTemplate.Builder()
                             .ofType(activityType)
                             .build())
         .named("TestCardGoal")
-        .forAllTimeIn(new WindowsWrapperExpression(new Windows(period)))
+        .forAllTimeIn(new WindowsWrapperExpression(Windows.definedEverywhere(period, true)))
         .owned(ChildCustody.Jointly)
         .build();
 
@@ -616,7 +616,7 @@ public class TestApplyWhen {
   @Test
   public void testCoexistenceWindowCutoff() {
 
-    Window period = Window.betweenClosedOpen(Duration.of(0, Duration.SECONDS), Duration.of(12, Duration.SECONDS));
+    Interval period = Interval.betweenClosedOpen(Duration.of(0, Duration.SECONDS), Duration.of(12, Duration.SECONDS));
 
     final var fooMissionModel = SimulationUtility.getFooMissionModel();
     final var planningHorizon = new PlanningHorizon(TestUtility.timeFromEpochSeconds(0), TestUtility.timeFromEpochSeconds(25));
@@ -642,7 +642,7 @@ public class TestApplyWhen {
 
     //and cut off in the middle of one of the already present activities (period ends at 18)
     CoexistenceGoal goal = new CoexistenceGoal.Builder()
-        .forAllTimeIn(new WindowsWrapperExpression(new Windows(period)))
+        .forAllTimeIn(new WindowsWrapperExpression(Windows.definedEverywhere(period, true)))
         .forEach(framework)
         .thereExistsOne(new ActivityCreationTemplate.Builder()
                             .ofType(actTypeA)
@@ -665,10 +665,10 @@ public class TestApplyWhen {
   @Test
   public void testCoexistenceJustFits() {
 
-    Window period = Window.betweenClosedOpen(Duration.of(0, Duration.SECONDS), Duration.of(13, Duration.SECONDS));//13, so it just fits in
+    Interval period = Interval.betweenClosedOpen(Duration.of(0, Duration.SECONDS), Duration.of(13, Duration.SECONDS));//13, so it just fits in
 
     var periodTre = new TimeRangeExpression.Builder()
-        .from(new Windows(period))
+        .from(Windows.definedEverywhere(period, true))
         .build();
 
     final var fooMissionModel = SimulationUtility.getFooMissionModel();
@@ -695,7 +695,7 @@ public class TestApplyWhen {
 
     //and cut off in the middle of one of the already present activities (period ends at 18)
     CoexistenceGoal goal = new CoexistenceGoal.Builder()
-        .forAllTimeIn(new WindowsWrapperExpression(new Windows(period)))
+        .forAllTimeIn(new WindowsWrapperExpression(Windows.definedEverywhere(period, true)))
         .forEach(framework)
         .thereExistsOne(new ActivityCreationTemplate.Builder()
                             .ofType(actTypeA)
@@ -725,10 +725,10 @@ public class TestApplyWhen {
 
      */
 
-    Window period = Window.betweenClosedOpen(Duration.of(0, Duration.SECONDS), Duration.of(13, Duration.SECONDS));
+    Interval period = Interval.betweenClosedOpen(Duration.of(0, Duration.SECONDS), Duration.of(13, Duration.SECONDS));
 
     var periodTre = new TimeRangeExpression.Builder()
-        .from(new Windows(period))
+        .from(Windows.definedEverywhere(period, true))
         .build();
 
     final var fooMissionModel = SimulationUtility.getFooMissionModel();
@@ -756,7 +756,7 @@ public class TestApplyWhen {
     //and cut off in the middle of one of the already present activities (period ends at 18)
     final var actTypeB = problem.getActivityType("BasicActivity");
     CoexistenceGoal goal = new CoexistenceGoal.Builder()
-        .forAllTimeIn(new WindowsWrapperExpression(new Windows(period)))
+        .forAllTimeIn(new WindowsWrapperExpression(Windows.definedEverywhere(period, true)))
         .forEach(framework)
         .thereExistsOne(new ActivityCreationTemplate.Builder()
                             .ofType(actTypeB)
@@ -804,11 +804,11 @@ public class TestApplyWhen {
     //  pass this plan as initialPlan to Problem object
     problem.setInitialPlan(partialPlan);
 
-    //create goal window
-    final var goalWindow = new Windows(new LinkedList<Window>(Arrays.asList(
-        Window.between(Duration.of(1, Duration.SECONDS), Duration.of(4, Duration.SECONDS)),
-        Window.between(Duration.of(12, Duration.SECONDS), Duration.of(18, Duration.SECONDS))
-    )));
+    //create goal interval
+    final var goalWindow = Windows.definedEverywhere(List.of(
+        Interval.between(Duration.of(1, Duration.SECONDS), Duration.of(4, Duration.SECONDS)),
+        Interval.between(Duration.of(12, Duration.SECONDS), Duration.of(18, Duration.SECONDS))
+    ), true);
 
     //want to create another activity for each of the already present activities
     //  foreach with activityexpression
@@ -869,14 +869,14 @@ public class TestApplyWhen {
     //  pass this plan as initialPlan to Problem object
     problem.setInitialPlan(partialPlan);
 
-    //create goal window
-    final var goalWindow = new Windows(new LinkedList<Window>(Arrays.asList(
-        Window.between(Duration.of(2, Duration.SECONDS), Duration.of(5, Duration.SECONDS)), //FIXED: the first space in a windows object/the lowest time defines whats used in find (more deeply in match) to define the startRange, which goes from this window's overall start to end. even if the boundaries are weird within the windows, the cutoff here is only at the start and the end. debugging this test can show you as you his the call on line 181 in Coexistence Goal, which goes to 56 in TimeRangeExpression, which goes to 175 in PlanInMemory which goes to 499 in ActivityExpression.
-        Window.between(Duration.of(10, Duration.SECONDS), Duration.of(14, Duration.SECONDS)),
-        Window.between(Duration.of(16, Duration.SECONDS), Duration.of(18, Duration.SECONDS)),
-        Window.between(Duration.of(21, Duration.SECONDS), Duration.of(21, Duration.SECONDS)),
-        Window.between(Duration.of(23, Duration.SECONDS), Duration.of(28, Duration.SECONDS))
-    )));
+    //create goal interval
+    final var goalWindow = Windows.definedEverywhere(List.of(
+        Interval.between(Duration.of(2, Duration.SECONDS), Duration.of(5, Duration.SECONDS)), //FIXED: the first space in a windows object/the lowest time defines whats used in find (more deeply in match) to define the startRange, which goes from this interval's overall start to end. even if the boundaries are weird within the windows, the cutoff here is only at the start and the end. debugging this test can show you as you his the call on line 181 in Coexistence Goal, which goes to 56 in TimeRangeExpression, which goes to 175 in PlanInMemory which goes to 499 in ActivityExpression.
+        Interval.between(Duration.of(10, Duration.SECONDS), Duration.of(14, Duration.SECONDS)),
+        Interval.between(Duration.of(16, Duration.SECONDS), Duration.of(18, Duration.SECONDS)),
+        Interval.between(Duration.of(21, Duration.SECONDS), Duration.of(21, Duration.SECONDS)),
+        Interval.between(Duration.of(23, Duration.SECONDS), Duration.of(28, Duration.SECONDS))
+    ), true);
 
     //want to create another activity for each of the already present activities
     //  foreach with activityexpression
@@ -916,11 +916,11 @@ public class TestApplyWhen {
   public void testCoexistenceWindowsBisect() { //bad, should fail completely. worth investigating.
     /*
        COEXISTENCE LATCH POINTS:
-       (seek to add Duration [++] activities to each of these, wherever an activity happens/theres a window)
+       (seek to add Duration [++] activities to each of these, wherever an activity happens/theres a interval)
                            123456789|012 (last 2 not technically included, it is a "fencepost")
                           [++++---++|+++]
-                                             DEPRECATED GOAL WINDOW: [++++++-+--++] //after testing, both 1-long window and 2-long windows fail. They match the activity and all but fail once you get to createActivityForReal.
-       FIXED GOAL WINDOW: [++++++-++|+++] //after testing, both 1-long window and 2-long windows fail. They match the activity and all but fail once you get to createActivityForReal.
+                                             DEPRECATED GOAL WINDOW: [++++++-+--++] //after testing, both 1-long interval and 2-long windows fail. They match the activity and all but fail once you get to createActivityForReal.
+       FIXED GOAL WINDOW: [++++++-++|+++] //after testing, both 1-long interval and 2-long windows fail. They match the activity and all but fail once you get to createActivityForReal.
        RESULT:            [++-------|++-]
      */
 
@@ -940,13 +940,13 @@ public class TestApplyWhen {
     //  pass this plan as initialPlan to Problem object
     problem.setInitialPlan(partialPlan);
 
-    //create goal window
-    final var goalWindow = new Windows(new LinkedList<Window>(Arrays.asList(
-        Window.between(Duration.of(1, Duration.SECONDS), Duration.of(6, Duration.SECONDS)), //FIXED: why doesn't this first one doesn't get scheduled? It does if it starts at 0 but should if it starts at 1.
-        Window.between(Duration.of(8, Duration.SECONDS), Duration.of(9, Duration.SECONDS)), //too short
-        //Window.between(Duration.of(11, Duration.SECONDS), Duration.of(13, Duration.SECONDS)) //fails because final "fencepost" lies outside of horizon
-        Window.between(Duration.of(10, Duration.SECONDS), Duration.of(12, Duration.SECONDS)) //passes because even though it touches boundary, large enough. the fence at 12 is not included, just the fencepost at 12.
-    )));
+    //create goal interval
+    final var goalWindow = Windows.definedEverywhere(List.of(
+        Interval.between(Duration.of(1, Duration.SECONDS), Duration.of(6, Duration.SECONDS)), //FIXED: why doesn't this first one doesn't get scheduled? It does if it starts at 0 but should if it starts at 1.
+        Interval.between(Duration.of(8, Duration.SECONDS), Duration.of(9, Duration.SECONDS)), //too short
+        //Interval.between(Duration.of(11, Duration.SECONDS), Duration.of(13, Duration.SECONDS)) //fails because final "fencepost" lies outside of horizon
+        Interval.between(Duration.of(10, Duration.SECONDS), Duration.of(12, Duration.SECONDS)) //passes because even though it touches boundary, large enough. the fence at 12 is not included, just the fencepost at 12.
+    ), true);
 
     //want to create another activity for each of the already present activities
     //  foreach with activityexpression
@@ -982,7 +982,7 @@ public class TestApplyWhen {
   public void testCoexistenceWindowsBisect2() { //corrected. Bisection does work successfully.
     /*
        COEXISTENCE LATCH POINTS:
-          (seek to add Duration [++] activities to each of these, wherever an activity happens/theres a window)
+          (seek to add Duration [++] activities to each of these, wherever an activity happens/theres a interval)
                      1234567890123456
                     [++++++++++++++++]
        GOAL WINDOW: [+++-++--+++--+++] //last one fails regardless of length
@@ -1004,13 +1004,13 @@ public class TestApplyWhen {
     //  pass this plan as initialPlan to Problem object
     problem.setInitialPlan(partialPlan);
 
-    //create goal window
-    final var goalWindow = new Windows(new LinkedList<Window>(Arrays.asList(
-        Window.between(Duration.of(1, Duration.SECONDS), Duration.of(3, Duration.SECONDS)), //FIXED: first one passes, but fails if the above activity starts at 0
-        Window.between(Duration.of(5, Duration.SECONDS), Duration.of(6, Duration.SECONDS)), //second one fails because too short, even though window shows up in CoexistenceGoal
-        Window.between(Duration.of(9, Duration.SECONDS), Duration.of(11, Duration.SECONDS)), //win! (even though window bisected)
-        Window.between(Duration.of(14, Duration.SECONDS), Duration.of(16, Duration.SECONDS)) //fourth one fails because of bad edge case behavior, window doesn't even show up in CoexistenceGoal. If the edge of the new activity touches the end of the horizon (ie 2 second activity scheduled from 14-16, horizon ends at 16), fails. Passes if its a longer window like 13-16.
-    )));
+    //create goal interval
+    final var goalWindow = Windows.definedEverywhere(List.of(
+        Interval.between(Duration.of(1, Duration.SECONDS), Duration.of(3, Duration.SECONDS)), //FIXED: first one passes, but fails if the above activity starts at 0
+        Interval.between(Duration.of(5, Duration.SECONDS), Duration.of(6, Duration.SECONDS)), //second one fails because too short, even though interval shows up in CoexistenceGoal
+        Interval.between(Duration.of(9, Duration.SECONDS), Duration.of(11, Duration.SECONDS)), //win! (even though interval bisected)
+        Interval.between(Duration.of(14, Duration.SECONDS), Duration.of(16, Duration.SECONDS)) //fourth one fails because of bad edge case behavior, interval doesn't even show up in CoexistenceGoal. If the edge of the new activity touches the end of the horizon (ie 2 second activity scheduled from 14-16, horizon ends at 16), fails. Passes if its a longer interval like 13-16.
+    ), true);
 
     //want to create another activity for each of the already present activities
     //  foreach with activityexpression
@@ -1046,10 +1046,10 @@ public class TestApplyWhen {
   @Test
   public void testCoexistenceUncontrollableJustFits() {
 
-    Window period = Window.betweenClosedOpen(Duration.of(0, Duration.SECONDS), Duration.of(13, Duration.SECONDS));
+    Interval period = Interval.betweenClosedOpen(Duration.of(0, Duration.SECONDS), Duration.of(13, Duration.SECONDS));
 
     var periodTre = new TimeRangeExpression.Builder()
-        .from(new Windows(period))
+        .from(Windows.definedEverywhere(period, true))
         .build();
 
     final var fooMissionModel = SimulationUtility.getFooMissionModel();
@@ -1077,7 +1077,7 @@ public class TestApplyWhen {
     //and cut off in the middle of one of the already present activities (period ends at 18)
     final var actTypeB = problem.getActivityType("BasicActivity");
     CoexistenceGoal goal = new CoexistenceGoal.Builder()
-        .forAllTimeIn(new WindowsWrapperExpression(new Windows(period)))
+        .forAllTimeIn(new WindowsWrapperExpression(Windows.definedEverywhere(period, true)))
         .forEach(framework)
         .thereExistsOne(new ActivityCreationTemplate.Builder()
                             .ofType(actTypeB)
@@ -1121,9 +1121,9 @@ public class TestApplyWhen {
         new RealValue(2.0)
     );
 
-    //[and a goal corresponding to that window]
+    //[and a goal corresponding to that interval]
     CardinalityGoal whenActivitiesGreaterThan2 = new CardinalityGoal.Builder()
-        .duration(Window.between(Duration.of(16, Duration.SECONDS), Duration.of(19, Duration.SECONDS)))
+        .duration(Interval.between(Duration.of(16, Duration.SECONDS), Duration.of(19, Duration.SECONDS)))
         .occurences(new Range<>(3, 10))
         .thereExistsOne(new ActivityCreationTemplate.Builder()
                             .ofType(activityTypeDependent)
@@ -1139,7 +1139,7 @@ public class TestApplyWhen {
     //    - Joel
     RecurrenceGoal addRecurringActivityModifyingResource = new RecurrenceGoal.Builder()
         .named("Test recurrence goal")
-        .forAllTimeIn(new WindowsWrapperExpression(new Windows(hor.getHor())))
+        .forAllTimeIn(new WindowsWrapperExpression(Windows.definedEverywhere(hor.getHor(), true)))
         .thereExistsOne(new ActivityCreationTemplate.Builder()
                             .ofType(activityTypeIndependent)
                             .duration(Duration.of(2, Duration.SECONDS))
@@ -1196,9 +1196,9 @@ public class TestApplyWhen {
     );
 
 
-    //[and a goal corresponding to that window]
+    //[and a goal corresponding to that interval]
     CardinalityGoal whenActivitiesGreaterThan2 = new CardinalityGoal.Builder()
-        .duration(Window.between(Duration.of(16, Duration.SECONDS), Duration.of(19, Duration.SECONDS)))
+        .duration(Interval.between(Duration.of(16, Duration.SECONDS), Duration.of(19, Duration.SECONDS)))
         .occurences(new Range<>(3, 10))
         .thereExistsOne(new ActivityCreationTemplate.Builder()
                             .ofType(activityTypeDependent)
@@ -1214,7 +1214,7 @@ public class TestApplyWhen {
     //    - Joel
     RecurrenceGoal addRecurringActivityModifyingResource = new RecurrenceGoal.Builder()
         .named("Test recurrence goal")
-        .forAllTimeIn(new WindowsWrapperExpression(new Windows(hor.getHor())))
+        .forAllTimeIn(new WindowsWrapperExpression(Windows.definedEverywhere(hor.getHor(), true)))
         .thereExistsOne(new ActivityCreationTemplate.Builder()
                             .ofType(activityTypeIndependent)
                             .duration(Duration.of(2, Duration.SECONDS))
@@ -1267,26 +1267,21 @@ public class TestApplyWhen {
 
     // "Make an expression that depends on a resource (the resource here is mission.activitiesExecuted).
     Expression<Windows> gte = new All(
-        new LinkedList<Expression<Windows>>(Arrays.asList(
+        new LinkedList<>(Arrays.asList(
             new GreaterThanOrEqual(
                 new RealResource("/activitiesExecuted"),
                 new RealValue(2.0)
             ),
             new WindowsWrapperExpression( //without this would just use planning horizon for time restrictions!
-                new Windows(
-                    Window.between(
-                        Duration.of(1, Duration.SECONDS),
-                        Duration.of(18, Duration.SECONDS)
-                    )
-                )
+                Windows.definedEverywhere(Interval.between(Duration.of(1, Duration.SECONDS), Duration.of(18, Duration.SECONDS)), true)
             )
         ))
     );
 
 
-    //[and a goal corresponding to that window]
+    //[and a goal corresponding to that interval]
     CardinalityGoal whenActivitiesGreaterThan2 = new CardinalityGoal.Builder()
-        .duration(Window.between(Duration.of(16, Duration.SECONDS), Duration.of(19, Duration.SECONDS)))
+        .duration(Interval.between(Duration.of(16, Duration.SECONDS), Duration.of(19, Duration.SECONDS)))
         .occurences(new Range<>(3, 10))
         .thereExistsOne(new ActivityCreationTemplate.Builder()
                             .ofType(activityTypeDependent)
@@ -1302,7 +1297,7 @@ public class TestApplyWhen {
     //    - Joel
     RecurrenceGoal addRecurringActivityModifyingResource = new RecurrenceGoal.Builder()
         .named("Test recurrence goal")
-        .forAllTimeIn(new WindowsWrapperExpression(new Windows(hor.getHor())))
+        .forAllTimeIn(new WindowsWrapperExpression(Windows.definedEverywhere(hor.getHor(), true)))
         .thereExistsOne(new ActivityCreationTemplate.Builder()
                             .ofType(activityTypeIndependent)
                             .duration(Duration.of(2, Duration.SECONDS))
